# wasm-poc

./: CMakeLists.txt  README.md
eigen/: CMakeLists.txt  COPYING.MPL2  COPYING.README
eigen/Eigen/: Core
eigen/bench/: dense_solvers.cpp
eigen/blas/: BandTriangularSolver.h  CMakeLists.txt  PackedTriangularMatrixVector.h  common.h  level1_cplx_impl.h  level3_impl.h
eigen/ci/: README.md  build.gitlab-ci.yml  smoketests.gitlab-ci.yml  test.gitlab-ci.yml
eigen/cmake/: EigenConfigureTesting.cmake  EigenSmokeTestList.cmake  EigenTesting.cmake  FindAccelerate.cmake  FindCLANG_FORMAT.cmake  FindComputeCpp.cmake  FindDPCPP.cmake
eigen/doc/: CMakeLists.txt  QuickReference.dox  SparseQuickReference.dox  TutorialSlicingIndexing.dox  eigen_navtree_hacks.js  eigendoxy.css
eigen/failtest/: CMakeLists.txt
eigen/lapack/: CMakeLists.txt  complex_double.cpp  complex_single.cpp  double.cpp  single.cpp
eigen/test/: AnnoyingScalar.h  CMakeLists.txt  OffByOneScalar.h  accelerate_support.cpp  adjoint.cpp  array_cwise.cpp  array_for_matrix.cpp  basicstuff.cpp  bdcsvd.cpp  bfloat16_float.cpp  blasutil.cpp  block.cpp  boostmultiprec.cpp  constexpr.cpp  dense_storage.cpp  diagonal_matrix_variadic_ctor.cpp  diagonalmatrices.cpp  dynalloc.cpp  eigensolver_generalized_real.cpp  evaluators.cpp  fastmath.cpp  geo_alignedbox.cpp  geo_eulerangles.cpp  geo_orthomethods.cpp  geo_quaternion.cpp  gpu_common.h  gpu_test_helper.h  half_float.cpp  householder.cpp  incomplete_cholesky.cpp  indexed_view.cpp  inverse.cpp  (+64 more)
public/: main.html  main.js  main.wasm
src/: CMakeCache.txt  a.out  main.cpp
(+321 files in other folders)
